--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+body {
+  background-color: grey;
+  color: darkred;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10% 20%
+}
 
+.exp-header {
+  text-transform: uppercase;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: rgba(0,0,0, 0.1)
+}
