--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 10% 20%
 }
-
+h1 {
+  color: white;
+}
 .exp-header {
   text-transform: uppercase;
   border-top: 1px solid black;
